--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,43 @@
-/Testing/testing.aux
-/settings.aux
-/Manual/manual.aux
-/Maintenance/maintenance.aux
-/Evaluation/evaluation.aux
-/Design/design.aux
-/coursework.toc
-/coursework.synctex.gz
-/coursework.pdf
-/coursework.out
-/coursework.log
-/coursework.aux
-/Analysis/analysis.aux
-/.project
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
